# betterbase

./: .gitignore  CLAUDE.md  Cargo.toml  DIVERGENCE.md  README.md  justfile
crates/betterbase-auth/: Cargo.toml
crates/betterbase-auth/src/: error.rs  jwe.rs  key_extraction.rs  mailbox.rs  pkce.rs  thumbprint.rs
crates/betterbase-crypto/: Cargo.toml
crates/betterbase-crypto/src/: aes_gcm.rs  channel.rs  dek.rs  edit_chain.rs  epoch.rs  lib.rs  signing.rs  ucan.rs
crates/betterbase-db/: Cargo.toml
crates/betterbase-db-wasm/: Cargo.toml
crates/betterbase-db-wasm/src/: adapter.rs  collection.rs  conversions.rs  error.rs  lib.rs  middleware.rs  sync.rs  wasm_sqlite.rs  wasm_sqlite_backend.rs
crates/betterbase-db/src/: error.rs
crates/betterbase-db/src/index/: planner.rs
crates/betterbase-db/src/reactive/: event_emitter.rs
crates/betterbase-db/src/storage/: record_manager.rs  sqlite.rs  traits.rs
crates/betterbase-db/src/sync/: mod.rs
crates/betterbase-db/tests/collection/: autofill.rs  builder.rs  migrate.rs
crates/betterbase-db/tests/index/: planner.rs
crates/betterbase-db/tests/middleware/: typed_adapter.rs
crates/betterbase-db/tests/patch/: changeset.rs  diff.rs
crates/betterbase-db/tests/query/: execute.rs  operators.rs
crates/betterbase-db/tests/reactive/: adapter.rs  event.rs  event_emitter.rs  query_fields.rs
crates/betterbase-db/tests/scenarios/: integration.rs
crates/betterbase-db/tests/schema/: node.rs  serialize.rs  validate.rs
crates/betterbase-db/tests/storage/: adapter.rs  record_manager.rs  remote_changes.rs  sqlite.rs
crates/betterbase-db/tests/sync/: manager.rs  scheduler.rs
crates/betterbase-discovery/: Cargo.toml
crates/betterbase-discovery/src/: lib.rs  metadata.rs  types.rs  webfinger.rs
crates/betterbase-sync-core/: Cargo.toml
crates/betterbase-sync-core/src/: epoch_cache.rs  error.rs  membership.rs  padding.rs  reencrypt.rs  transport.rs
crates/betterbase-wasm/: Cargo.toml
crates/betterbase-wasm/src/: auth.rs  crypto.rs  discovery.rs  sync.rs
crates/less-auth/: Cargo.toml
crates/less-auth/src/: error.rs  jwe.rs  key_extraction.rs  lib.rs  mailbox.rs  pkce.rs  thumbprint.rs  types.rs
crates/less-crypto/: Cargo.toml
crates/less-crypto/src/: aes_gcm.rs  base64url.rs  channel.rs  dek.rs  edit_chain.rs  epoch.rs  error.rs  hkdf.rs  lib.rs  signing.rs  types.rs  ucan.rs
crates/less-db/: Cargo.toml
crates/less-db-wasm/: Cargo.toml
crates/less-db-wasm/js/: package-lock.json  package.json  vitest.bench.config.ts  vitest.browser.config.ts
crates/less-db-wasm/src/: adapter.rs  collection.rs  conversions.rs  js_backend.rs  lib.rs  middleware.rs  sync.rs  wasm_sqlite.rs  wasm_sqlite_backend.rs
crates/less-discovery/: Cargo.toml
crates/less-discovery/src/: error.rs  lib.rs  metadata.rs  types.rs  webfinger.rs
crates/less-platform-wasm/: Cargo.toml
crates/less-platform-wasm/js/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.browser.config.ts
crates/less-platform-wasm/js/browser-tests/auth/: key-store.test.ts
crates/less-platform-wasm/js/browser-tests/crypto/: epoch.test.ts  interop.test.ts  webcrypto.test.ts
crates/less-platform-wasm/js/browser-tests/sync/: epoch-rotation.test.ts
crates/less-platform-wasm/js/src/: auth.ts  crypto.ts  discovery.ts  index.ts  sync.ts  wasm-init.ts
crates/less-platform-wasm/js/src/auth/: client.ts  crypto.ts  errors.ts  index.ts  internals.ts  jwt.test.ts  jwt.ts  key-store.ts  react.ts  session.ts  types.ts
crates/less-platform-wasm/js/src/crypto/: base64url.ts  channel.ts  dek.ts  edit-chain.ts  epoch.ts  index.ts  internals.ts  json-crypto.ts  signing.ts  sync-crypto.ts  types.ts  ucan.ts  webcrypto.ts
crates/less-platform-wasm/js/src/discovery/: index.ts  metadata.ts  types.ts  webfinger.ts
crates/less-platform-wasm/js/src/sync/: cbor.ts  client.ts  encoding.test.ts  encoding.ts  event-manager.ts  file-store.ts  files.ts  handle.test.ts  index.ts  invitations.ts  membership.ts  move-to-space.ts  presence.ts  protocol.ts  react.ts  reencrypt.ts  rpc-connection.ts  space-manager.ts  spaceid.test.ts  spaceid.ts  spaces-collection.ts  spaces-middleware.ts  spaces.ts  stable-stringify.test.ts  sync-engine.ts  sync-state.ts  transport.ts  types.ts  ws-client.ts  ws-frames.ts  ws-transport.ts
crates/less-platform-wasm/src/: auth.rs  crypto.rs  discovery.rs  error.rs  lib.rs  sync.rs
crates/less-sync-core/: Cargo.toml
crates/less-sync-core/src/: envelope.rs  epoch_cache.rs  error.rs  lib.rs  membership.rs  reencrypt.rs  transport.rs  types.rs
crates/sqlite-wasm-vfs/: .cargo_vcs_info.json  Cargo.toml
crates/sqlite-wasm-vfs/src/: sahpool.rs
js/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.bench.config.ts
js/bench/db/: bench-worker.ts  comparison.bench.ts
js/browser-tests/auth/: key-store.test.ts  pkce.test.ts
js/browser-tests/crypto/: dek.test.ts  encrypt-decrypt.test.ts  epoch.test.ts  signing.test.ts  webcrypto.test.ts
js/browser-tests/db/: multi-tab.test.ts  opfs-bulk.test.ts  opfs-crud.test.ts  opfs-helpers.ts  opfs-persistence.test.ts  opfs-query.test.ts  opfs-reactive.test.ts  opfs-sync.test.ts  opfs-test-worker.ts
js/src/: index.ts  wasm-init.ts
src/: error.rs  types.rs
src/collection/: autofill.rs  builder.rs
src/crdt/: mod.rs  patch_log.rs  schema_aware.rs
src/index/: planner.rs  types.rs
src/middleware/: typed_adapter.rs
src/patch/: diff.rs
src/query/: execute.rs  types.rs
src/reactive/: adapter.rs  event.rs  event_emitter.rs
src/schema/: node.rs  serialize.rs  validate.rs
src/storage/: adapter.rs  mod.rs  record_manager.rs  remote_changes.rs  sqlite.rs
src/sync/: manager.rs  mod.rs  scheduler.rs  types.rs
tests/: middleware.rs  reactive.rs  storage.rs
tests/collection/: autofill.rs  builder.rs
tests/index/: planner.rs
tests/middleware/: middleware.rs
tests/patch/: diff.rs
tests/reactive/: adapter.rs  event_emitter.rs  mod.rs  query_fields.rs
tests/schema/: serialize.rs
tests/storage/: adapter.rs  record_manager.rs  sqlite.rs
tests/sync/: manager.rs  scheduler.rs
(+120 files in other folders)
