[workspace]
resolver = "2"
members = [
    "crates/betterbase-crypto",
    "crates/betterbase-discovery",
    "crates/betterbase-auth",
    "crates/betterbase-sync-core",
    "crates/betterbase-wasm",
    "crates/betterbase-db",
    "crates/betterbase-db-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Betterbase <hello@betterbase.dev>"]
repository = "https://github.com/BetterbaseHQ/betterbase"

[patch.crates-io]
sqlite-wasm-vfs = { path = "crates/sqlite-wasm-vfs" }
