[package]
name = "betterbase-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AES-256-GCM encryption, HKDF key derivation, ECDSA P-256 signing, and UCAN support"

[dependencies]
aes-gcm = { version = "0.10", features = ["zeroize"] }
aes-kw = "0.2"
hkdf = "0.12"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
getrandom = { version = "0.2", features = ["js"] }
base64ct = { version = "1", features = ["alloc"] }
zeroize = { version = "1", features = ["derive"] }
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
hex = "0.4"
