[package]
name = "betterbase-db-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings for betterbase-db"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
betterbase-db = { path = "../betterbase-db", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
