[package]
name = "betterbase-db"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite WASM document store with CRDT support"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
js = ["uuid/js"]

[dependencies]
json-joy = { path = "../../../json-joy-rs/crates/json-joy" }
json-joy-json-pack = { path = "../../../json-joy-rs/crates/json-joy-json-pack" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
base64 = "0.22"
parking_lot = "0.12"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
