[package]
name = "betterbase-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "BlobEnvelope CBOR encoding, padding, and transport encrypt/decrypt pipeline"

[dependencies]
betterbase-crypto = { path = "../betterbase-crypto" }
ciborium = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
