[package]
name = "less-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
less-crypto = { path = "../less-crypto" }
aes-gcm = "0.10"
aes-kw = "0.2"
base64ct = { version = "1", features = ["alloc"] }
getrandom = { version = "0.2", features = ["js"] }
hkdf = "0.12"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdh", "jwk"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
