[package]
name = "less-sync-core"
version = "0.1.0"
edition = "2021"

[dependencies]
less-crypto = { path = "../less-crypto" }
ciborium = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
